[project]
name = "pyroscope-io"
version = "1.0.1"
description = "Pyroscope Python integration"
authors = [
    {name = "Tolya Korniltsev",email = "anatoly.korniltsev@grafana.com"}
]
license-files = [ "LICENSE" ]
#license = {text = "Apache 2.0"}
readme = "README.md"
#requires-python = "3.10"
dependencies = [
    "cffi (>=2.0.0,<3.0.0)",
]

[tool.setuptools.packages]
find = { where = ["pyroscope_ffi/python/python/"] }

[tool.distutils.bdist_wheel]
py_limited_api = "cp39"

[[tool.setuptools-rust.ext-modules]]
target = "pyroscope_python_extension.pyroscope_python_extension"
path = "pyroscope_ffi/python/rust/Cargo.toml"
binding = "NoBinding"
cargo_manifest_args=["--locked"]

[build-system]
requires = [
    "setuptools (>=82.0.0,<83.0.0)",
    "setuptools-rust (>=1.12.0,<2.0.0)",
    "cffi (>=2.0.0,<3.0.0)",
]


build-backend = "setuptools.build_meta"
