[project]
name = "pyroscope-io"
version = "1.0.2"
description = "Pyroscope Python integration"
authors = [
    {name = "Tolya Korniltsev",email = "anatoly.korniltsev@grafana.com"}
]
license-files = [ "LICENSE" ]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cffi (>=2.0.0,<3.0.0)",
]
maintainers = [
    {name = "Tolyan Korniltsev", email = "anatoly.korniltsev@grafana.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Utilities",
]

[tool.setuptools.packages]
find = { where = ["pyroscope_ffi/python/python/"] }

[tool.distutils.bdist_wheel]
py_limited_api = "cp310"


[build-system]
requires = [
    "setuptools (>=82.0.0,<83.0.0)",
    "setuptools-rust (>=1.12.0,<2.0.0)",
    "cffi (>=2.0.0,<3.0.0)",
]


build-backend = "setuptools.build_meta"
