[package]
name = "pyroscope_backends"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "Pyroscope Backend Trait definition and various implementations"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
pprof = {  version="0.6.2"}
#rbspy = "0.10"
rbspy = { path = "../../rbspy-clone" }
py-spy = "0.3.11"
thiserror ="1.0"
log = "0.4"
anyhow = "*"
