[package]
name = "pyroscope-cli"
description = """
Pyroscope Profiler CLI
"""
keywords = ["pyroscope", "profiler", "cli"]
authors = ["Abid Omar <contact@omarabid.com>"]
version = "0.2.6"
edition = "2021"
license = "Apache-2.0"
homepage = "https://pyroscope.io"
documentation  = "https://docs.rs/pyroscope"
repository = "https://github.com/pyroscope-io/pyroscope-rs"
readme = "README.md"
rust-version = "1.63"


[dependencies]
human-panic = "1.0.3"
pretty_env_logger = "0.4.0"
better-panic = "0.3.0"
log = "=0.4.17"
clap_complete = "3.2"
names= "0.13.0"
ctrlc = "3.2.2"
duct = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.30"
color-backtrace = "0.5.1"
config = "=0.11.0"
lazy_static = "1.4.0"
slog = "2.7.0"
slog-term = "2.8.0"
slog-scope = "4.4.0"
slog-async = "2.7.0"
slog-stdlog = "4.1.0"
pyroscope = { path = "../", default-features = false }
pyroscope_pprofrs = { path = "../pyroscope_backends/pyroscope_pprofrs", default-features = false }
pyroscope_rbspy = { path = "../pyroscope_backends/pyroscope_rbspy", default-features = false }
pyroscope_pyspy = { path = "../pyroscope_backends/pyroscope_pyspy", default-features = false }
json = "0.12.4"

[dependencies.clap]
version = "3.2"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"

[features]
default = ["pyroscope/default", "pyroscope_pprofrs/default", "pyroscope_rbspy/default", "pyroscope_pyspy/default"]

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
