[package]
name = "pyroscope-cli"
description = """
Pyroscope Profiler CLI
"""
keywords = ["pyroscope", "profiler", "cli"]
authors = ["Abid Omar <contact@omarabid.com>"]
version = "0.2.9"
edition = "2021"
license = "Apache-2.0"
homepage = "https://pyroscope.io"
documentation  = "https://docs.rs/pyroscope"
repository = "https://github.com/pyroscope-io/pyroscope-rs"
readme = "README.md"
rust-version = "1.64"


[dependencies]
human-panic = "2.0.2"
better-panic = "0.3.0"
log = "0.4.25"
clap_complete = "4.5.44"
names= "0.14.0"
ctrlc = "3.2.2"
duct = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
config = "0.15.11"
lazy_static = "1.4.0"
slog = "2.7.0"
slog-term = "2.8.0"
slog-scope = "4.4.0"
slog-async = "2.7.0"
slog-stdlog = "4.1.0"
pyroscope = { path = "../", default-features = false }
pyroscope_pprofrs = { path = "../pyroscope_backends/pyroscope_pprofrs", default-features = false }
pyroscope_rbspy = { path = "../pyroscope_backends/pyroscope_rbspy", default-features = false }
pyroscope_pyspy = { path = "../pyroscope_backends/pyroscope_pyspy", default-features = false }
serde_json = "1.0.115"

[dependencies.clap]
version = "4.5.34"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "3.1.3"

[features]
default = ["pyroscope/default", "pyroscope_pprofrs/default", "pyroscope_rbspy/default", "pyroscope_pyspy/default"]
