[package]
name = "pyroscope-cli"
description = """
Pyroscope Profiler CLI
"""
keywords = ["pyroscope", "profiler", "cli"]
authors = ["Abid Omar <contact@omarabid.com>"]
version = "1.0.1"

license = "Apache-2.0"
homepage = "https://pyroscope.io"
documentation = "https://docs.rs/pyroscope"
repository = "https://github.com/pyroscope-io/pyroscope-rs"
readme = "README.md"
#todo upgrade rust
rust-version = "1.64"
edition = "2021"

[dependencies]
#todo move dependencies versions to workspace
log = "0.4"
toml = "0.8.20"
env_logger = "0.11.8"
ctrlc = "3.4"
duct = "0.13"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
pyroscope = { path = "../", default-features = false }
pyroscope_pprofrs = { path = "../pyroscope_backends/pyroscope_pprofrs", default-features = false }
pyroscope_rbspy = { path = "../pyroscope_backends/pyroscope_rbspy", default-features = false }
pyroscope_pyspy = { path = "../pyroscope_backends/pyroscope_pyspy", default-features = false }

[dependencies.clap]
version = "4.5"
features = ["cargo", "derive", "string"]

[dev-dependencies]
#todo add features to enable/disable python/ruby
[features]
default = ["pyroscope/default", "pyroscope_pprofrs/default", "pyroscope_rbspy/default", "pyroscope_pyspy/default"]
