[package]
name = "pyroscope_ffi"
description = """
Pyroscope Profiler FFI Interface
"""
keywords = ["pyroscope", "profiler", "ffi"]
authors = ["Abid Omar <contact@omarabid.com>"]
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://pyroscope.io"
documentation  = "https://docs.rs/pyroscope"
repository = "https://github.com/pyroscope-io/pyroscope-rs"
readme = "README.md"

[lib]
name = "pyroscope_ffi"
crate-type = ["cdylib"]

[dependencies]
