[package]
name = "kindasafe"
version = "0.1.0"
edition = "2024"
description = "Signal-safe memory reading for x86_64 and aarch64 using naked functions and crash recovery"
license = "Apache-2.0"
repository = "https://github.com/grafana/pyroscope-rs"
keywords = ["memory", "signal-safe", "no_std", "profiler"]
categories = ["no-std", "os::unix-apis"]
readme = "README.md"

[dependencies]

[dev-dependencies]
anyhow = "=1.0.102"
libc = "=0.2.183"
kindasafe_init = { path = "../kindasafe_init" }
