[package]
name = "pysignalprof"
version = "0.1.0"
edition = "2024"

[features]
default = []
debug-print = ["notlibc/debug-print", "python_unwind/debug-print"]

[dependencies]
kindasafe_init = { path = "../kindasafe_init" }
kindasafe = { path = "../kindasafe" }
python_offsets = { path = "../python_offsets" }
python_offsets_types = { path = "../python_offsets_types" }
python_unwind = { path = "../python_unwind" }
sig_ring = { path = "../sig_ring" }
sighandler = { path = "../sighandler" }
notlibc = { path = "../notlibc" }
bbqueue = "0.5"
libc = { version = "0.2.182" }
pprof_enc = { path = "../pprof_enc" }
pyroscope_ingest = { path = "../pyroscope_ingest" }
