[package]
name = "python_offsets"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
kindasafe = { path = "../kindasafe" }
kindasafe_init = { path = "../kindasafe_init" }
python_offsets_types = { path = "../python_offsets_types" }
object = { version = "0.38", default-features = false, features = ["read", "elf"] }
memmap2 = "0.9"

[dev-dependencies]
libc = "=0.2.183"
anyhow = "=1.0.102"
