[package]
name = "pyroscope_pprofrs"
description = """
pprof-rs backend for Pyroscope Profiler.
"""
keywords = ["pyroscope", "profiler", "pprof-rs"]
authors = ["Abid Omar <contact@omarabid.com>"]
version = "0.2.10"
edition = "2021"
license = "Apache-2.0"
homepage = "https://pyroscope.io"
documentation  = "https://docs.rs/pyroscope"
repository = "https://github.com/pyroscope-io/pyroscope-rs"
readme = "README.md"


[dependencies]
pprof2 = "0.13"
pyroscope = { version = "0.5.7", path = "../..", default-features = false }
log = "0.4"

[features]
default = ["pyroscope/default"]
frame-pointer = ["pprof2/frame-pointer"]

[target.aarch64-apple-darwin.dependencies]
pprof2 = { version = "0.13", features = ["frame-pointer"] }


