[package]
name = "pyroscope_pprofrs"
description = """
pprof-rs backend for Pyroscope Profiler.
"""
keywords = ["pyroscope", "profiler", "pprof-rs"]
authors = ["Abid Omar <contact@omarabid.com>"]
version = "0.2.10"
edition = "2021"
license = "Apache-2.0"
homepage = "https://pyroscope.io"
documentation  = "https://docs.rs/pyroscope"
repository = "https://github.com/pyroscope-io/pyroscope-rs"
readme = "README.md"


[dependencies]
pprof = { version = "0.15", features = ["framehop", "framehop-unwinder"] }
pyroscope = { version = "0.5.7", path = "../..", default-features = false }
log = { version = "0.4", optional = true }

[features]
default = ["pyroscope/default", "log"]
log = ["dep:log", "pyroscope/log"]

[target.aarch64-apple-darwin.dependencies]
pprof = { version = "0.15", features = ["framehop", "framehop-unwinder"] }


