[package]
name = "pyroscope_pyspy"
description = """
pyspy backend for Pyroscope Profiler.
"""
keywords = ["pyroscope", "profiler", "pyspy"]
authors = ["Abid Omar <contact@omarabid.com>"]
version = "0.2.5"
edition = "2021"
license = "Apache-2.0"
homepage = "https://pyroscope.io"
documentation  = "https://docs.rs/pyroscope"
repository = "https://github.com/pyroscope-io/pyroscope-rs"
readme = "README.md"

[dependencies]
py-spy = "0.3.14"
pyroscope = { version = "0.5.5", path = "../../" , default-features = false }
thiserror ="1.0"
log = "0.4"
inferno = "=0.11.14"

[features]
default = ["pyroscope/default"]

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
