[package]
name = "pyroscope_pyspy"
description = """
pyspy backend for Pyroscope Profiler.
"""
keywords = ["pyroscope", "profiler", "pyspy"]
authors = ["Abid Omar <contact@omarabid.com>"]
version = "0.2.5"
edition = "2021"
license = "Apache-2.0"
homepage = "https://pyroscope.io"
documentation  = "https://docs.rs/pyroscope"
repository = "https://github.com/pyroscope-io/pyroscope-rs"
readme = "README.md"

[dependencies]
py-spy = { version = "0.4.0", features = ["unwind"]}
pyroscope = { version = "0.5.7", path = "../../" , default-features = false }
log = "0.4"

[features]
default = ["pyroscope/default"]
