[package]
name = "pyroscope_pyspy2"
description = """
pyspy backend for Pyroscope Profiler.
"""
keywords = ["pyroscope", "profiler", "pyspy"]
authors = ["Abid Omar <contact@omarabid.com>"]
version = "0.2.5"
edition = "2021"
license = "Apache-2.0"
homepage = "https://pyroscope.io"
documentation = "https://docs.rs/pyroscope"
repository = "https://github.com/pyroscope-io/pyroscope-rs"
readme = "README.md"

[dependencies]
pyroscope = { version = "0.5.7", path = "../../", default-features = false }
log = "0.4"
proc-maps = "0.3.2"
regex = "1.10.4"
anyhow = "1.0.82"
remoteprocess="0.4.13"
lazy_static = "1.4.0"
libc = "0.2.153"
object = "0.35.0"
gimli = "0.29.0"
goblin = "0.8.0"
memmap = "0.7.0"

[features]
default = ["pyroscope/default"]
