[package]
name = "pyroscope_rbspy"
description = """
rbspy backend for Pyroscope Profiler.
"""
keywords = ["pyroscope", "profiler", "rbspy"]
authors = ["Abid Omar <contact@omarabid.com>"]
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"
homepage = "https://pyroscope.io"
documentation  = "https://docs.rs/pyroscope"
repository = "https://github.com/pyroscope-io/pyroscope-rs"
readme = "README.md"

[dependencies]
rbspy= {package = "rbspy-oncpu", path="../rbspy"}
pyroscope = { version = "0.5.4", path = "../../" }
thiserror ="1.0"
log = "0.4"
anyhow = "1.0.56"
inferno = "=0.11.14"

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
