[package]
name = "pyroscope_rbspy"
description = """
rbspy backend for Pyroscope Profiler.
"""
keywords = ["pyroscope", "profiler", "rbspy"]
authors = ["Abid Omar <contact@omarabid.com>"]
version = "0.2.5"
edition = "2021"
license = "Apache-2.0"
homepage = "https://pyroscope.io"
documentation  = "https://docs.rs/pyroscope"
repository = "https://github.com/pyroscope-io/pyroscope-rs"
readme = "README.md"

[dependencies]
rbspy = { version="0.33" }
pyroscope = { version = "0.5.7", path = "../../", default-features = false }
log = "0.4"
anyhow = "1.0.56"

[features]
default = ["pyroscope/default"]
