[package]
name = "cli"
version = "0.4.0"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "CLI interface"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
core = { path = "../core" }
clap_complete = "3.1"
names= "0.13.0"

[dependencies.clap]
version = "=3.1.6"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
