[package]
name = "core"
version = "0.1.0"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "Core package for the project"
edition = "2021"

[dependencies]
utils = {version = "0.1", path = "../utils" }
pyroscope = { version = "0.4", path = "../../" }
pyroscope_pprofrs = {version = "0.1", path = "../../pyroscope_backends/pyroscope_pprofrs" }
pyroscope_rbspy = {version = "0.1", path = "../../pyroscope_backends/pyroscope_rbspy" }
pyroscope_pyspy = {version = "0.1", path = "../../pyroscope_backends/pyroscope_pyspy" }
log = "=0.4.11"
ctrlc = "3.2.1"
duct = "0.13.5"
names= "0.13.0"
