[package]
name = "utils"
version = "0.1.0"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "Various utilities and functionalities"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
color-backtrace = "0.5.1"
config = "=0.11.0"
lazy_static = "1.4.0"
slog = "2.7.0"
slog-term = "2.8.0"
slog-scope = "4.4.0"
slog-async = "2.7.0"
slog-stdlog = "4.1.0"
clap = "=3.1.6"
log = "=0.4.11"
serde = { version = "1.0", features = ["derive"] }
pyroscope = {version = "0.4", path = "../../" }
