[package]
name = "ffikit"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = { version = "1.1.1", features = ["nonblocking"] }
pyroscope = { path  = "../../" }
bincode = "2.0.0-rc.1"
lazy_static = "1.4.0"
log = { version = "0.4", optional = true }

[features]
default = ["pyroscope/default", "log"]
log = ["dep:log", "pyroscope/log"]
