[package]
name = "ffikit"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = { version = "1.1.1", features = ["nonblocking"] }
pyroscope = { path  = "../../" }
lazy_static = "1.4.0"
log = "0.4"
