[package]
name = "python_wheel"
version = "0.0.1"
authors = ["Abid Omar <contact@pyroscope.io>"]
edition = "2021"
rust-version = "1.64"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyroscope = { path  = "../../" }
pyroscope_pyspy = { path = "../../pyroscope_backends/pyroscope_pyspy" }
ffikit = { path = "../ffikit" }
pretty_env_logger = "0.5.0"
log = "0.4"
pyo3 = "0.24"

