[metadata]
name = pyroscope_beta
version= 0.0.4
description = Pyroscope Python integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://proscope.io
maintainer = Abid Omar 
maintainer_email = contact@pyroscope.io 
license = Apache 2.0
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: Debuggers
    Topic :: Utilities
project_urls =
    Documentation = https://proscope.io
    Bug Tracker = https://proscope.io
    Discussions = https://proscope.io
    Changelog = https://proscope.io

[options]
packages = find:
install_requires =
    milksnakex>=0.1.6
include_package_data = True
zip_safe = False
