[metadata]
name = pyroscope-io
version= 1.0.1
description = Pyroscope Python integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pyroscope.io
maintainer = Abid Omar 
maintainer_email = contact@pyroscope.io 
license = Apache 2.0
license_files = 
    LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: Debuggers
    Topic :: Utilities
project_urls =
    Documentation = https://pyroscope.io
    Bug Tracker = https://pyroscope.io
    Discussions = https://pyroscope.io
    Changelog = https://pyroscope.io

[options]
packages = find:
include_package_data = True
zip_safe = False

[options.package_data]
pyroscope =
    *.so
    *.dylib
    *.dll
    *.pyd
