[package]
# todo rename this, include python in the name
name = "pyroscope_ffi"
version = "0.1.0"
authors = ["Abid Omar <contact@pyroscope.io>"]
edition = "2021"
rust-version = "1.64"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyroscope = { path  = "../../../" }
py-spy = { git = "https://github.com/grafana/py-spy", rev = "3b390dc4230207914164e1dd6888eb3e680b1560" }
ffikit = { path = "../../ffikit" }
pretty_env_logger = "0.5.0"
log = "0.4"
libc = "0.2.181"

[build-dependencies]
cbindgen = "0.29.0"

