[package]
name = "pyroscope2" # This is used as package name in python
version = "1.0.2"
authors = [
    "Abid Omar <contact@pyroscope.io>",
    "Tolyan Korniltsev <anatoly.korniltsev@grafana.com>"
]
edition = "2021"
rust-version = "1.64"

[lib]
crate-type = ["cdylib"]
name = "pyroscope2"

[dependencies]
pyroscope-rs = { path  = "../../../" }
py-spy = { git = "https://github.com/grafana/py-spy", rev = "3b390dc4230207914164e1dd6888eb3e680b1560" }
pretty_env_logger = "0.5.0"
log = "0.4"
libc = "0.2.181"
