[package]
name = "pyroscope_rust_ext" # This is used as package name for so placement
# todo figure out how to put this into pyroscope package without renaming the main crate
version = "1.0.2"
authors = [
    "Abid Omar <contact@pyroscope.io>",
    "Tolyan Korniltsev <anatoly.korniltsev@grafana.com>"
]
edition = "2021"
rust-version = "1.64"

[lib]
crate-type = ["cdylib"]
name = "pyroscope" # this is the name of the shared lib, e.g. pyroscope2.abi3.so

[dependencies]
pyroscope = { path  = "../../../" }
py-spy = { git = "https://github.com/grafana/py-spy", rev = "3b390dc4230207914164e1dd6888eb3e680b1560" }
pretty_env_logger = "0.5.0"
log = "0.4"
libc = "0.2.181"
