[package]
name = "pyroscope_python_extension" # This is used as package name for so placement
# todo figure out how to put this into pyroscope package without renaming the main crate
version = "2.0.0"
authors = [
    "Tolyan Korniltsev <anatoly.korniltsev@grafana.com>"
]
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["cdylib"]
name = "pyroscope_python_extension" # this is the name of the shared rust, e.g. pyroscope_python_extension.abi3.so

[dependencies]
pyroscope = { path = "../../../", default-features = false, features = ["native-tls"] }
py-spy = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
pysignalprof = { path = "../../../kit/pysignalprof", version = "2.0.0" }

[features]
default = ["rustls-tls"]
rustls-tls = ["pyroscope/rustls-tls"]
native-tls-vendored = ["pyroscope/native-tls-vendored"]
