[metadata]
name = thread_id 
version= 1.0.0
description = Fake wheel to generate audtiwheel libs
url = https://proscope.io
maintainer = Abid Omar 
maintainer_email = contact@pyroscope.io 
license = Apache 2.0
classifiers =
    Intended Audience :: Developers
project_urls =
    Documentation = https://proscope.io
    Bug Tracker = https://proscope.io
    Discussions = https://proscope.io
    Changelog = https://proscope.io

[options]
packages = find:
install_requires =
    milksnakex>=0.1.6
include_package_data = True
zip_safe = False
