[package]
name = "ffiruby"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

[lib]
name = "rbspy"
crate-type = ["cdylib"]

[dependencies]
pyroscope-rs = { path = "../../../../" }
rbspy = { version="0.42" }
remoteprocess = "0.5.0"
anyhow = "1.0"
# todo remove this dependency
pretty_env_logger = "0.5"
log = "0.4"
libc = "0.2.180"

[build-dependencies]
cbindgen = "0.29"

