[package]
name = "ffiruby"
version = "1.0.1"
edition = "2021"
rust-version = "1.64"

[lib]
name = "rbspy"
crate-type = ["cdylib"]

[dependencies]
pyroscope = { path = "../../../../", default-features = false }
rbspy = { workspace = true }
remoteprocess = { workspace = true }
anyhow = { workspace = true }
# todo remove this dependency
pretty_env_logger = { workspace = true }
log = { workspace = true }
libc = { workspace = true }

[features]
default = ["rustls-tls"]
rustls-tls = ["pyroscope/rustls-tls"]
native-tls-vendored = ["pyroscope/native-tls-vendored"]
