[package]
name = "ffiruby"
version = "1.0.2"
edition = "2021"
rust-version = "1.66"

[lib]
name = "rbspy"
crate-type = ["cdylib"]

[dependencies]
pyroscope = { path = "../../../../", default-features = false, features = ["native-tls"] }
rbspy = { workspace = true }
remoteprocess = { workspace = true }
anyhow = { workspace = true }
# todo remove this dependency
pretty_env_logger = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
